--- a/css/index.css
+++ b/css/index.css
@@ -336,9 +336,12 @@ opacity:1;
     background: #fff;
     right: 0px;
     bottom: 110px;
-
+    transition-delay: 1s;
+    opacity: 0;
 }
-
+#tutorial.active .wrap:before {
+    opacity: 1;
+}
 
 #tutorial.active .wrap{
 	opacity:1;
