--- a/css/index.css
+++ b/css/index.css
@@ -621,6 +621,13 @@ section.result:before{
     position: absolute;
     top: 0px;
     left: 0px;
+    transform: translateX(-1366px);
+    transition: 0.2s;
+}
+section.result.active:before{
+    
+        transform: translateX(0px);
+
 }
 
 
