--- a/css/index.css
+++ b/css/index.css
@@ -69,16 +69,18 @@ button{
 }
 
 h1{
-	position:absolute;
-	top:0px;
-	left:0px;
-	background:url(images/logo.png);
-	background-repeat:no-repeat;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background: url(images/logo.png);
+    background-repeat: no-repeat;
     width: 200px;
-    top: 37px;
-    left: 31px;
-	opacity:0;
-	transition:all 0.2s;
+    top: 40px;
+    height: 100px;
+    left: 33px;
+    opacity: 1;
+    transition: all 0.2s;
+    z-index: 8;
 }
 
 section.active h1{
